--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,7 @@
 --bluegreen-0: #FBFDFD;
 --neutral-100: #000000;
 --neutral-80: #1B1B1B;
+--neutral-70: #3C3C3C;
 --neutral-50: #5A5A5A;
 --neutral-40: #959595;
 --neutral-30: #C2C2C2;
