--- a/css/project-items.css
+++ b/css/project-items.css
@@ -9,7 +9,7 @@ body {
     font-weight: 400;
     font-style: normal;
     background-color: var(--neutral-10);
-    color: var(--neutral-100);
+    color: var(--neutral-70);
 }
 
 
@@ -183,7 +183,7 @@ h2 {
     font-weight: 700;
     color: var(--bluegreen-60);
     font-size: 32px;
-    margin-top: 40px;
+    margin: 0;
 }
 
 .subtitle {
@@ -241,8 +241,6 @@ h2 {
 .sub-content {
     display: flex;
     flex-direction: column;
-    gap: 5px;
-
 }
 
 .features {
@@ -312,7 +310,7 @@ h2 {
 
 /* PAGINATION */
 .pagination {
-    width: 80vw;
+    width: 90vw;
     place-items: center;
     align-items: center;
     display: flex;
@@ -334,7 +332,7 @@ h2 {
 .pagination-wrapper a {
     font-family: var(--primary-font);
     color: var(--bluegreen-60);
-    font-size: var(--fz-large);
+    font-size: var(--fz-regular);
 
     text-decoration: none;
     margin: 0;
@@ -342,6 +340,12 @@ h2 {
 
 .pagination-wrapper a:hover {
     color: #186973;
+}
+
+.pagination-wrapper:nth-of-type(2) {
+    display: flex;
+    flex-direction: column;;
+    place-items: flex-end;
 }
 
 
@@ -498,6 +502,12 @@ footer {
         place-content: space-between;
     }
 
+    .pagination-wrapper a {
+    font-family: var(--primary-font);
+    color: var(--neutral-40);
+    font-size: var(--fz-large);
+    }
+
     .contactme-section h3 {
         font-size: 32px;
     }
@@ -519,13 +529,13 @@ footer {
         font-size: var(--xsmall);
         font-family: var(--secondary-font);
         font-weight: 400;
-        color: var(--neutral-40);
+        color: var(--neutral-60);
         margin: 0;
     }
 
     .pagination-wrapper a {
         font-family: var(--primary-font);
-        color: var(--bluegreen-60);
+        color: var(--neutral-40);
         font-size: var(--fz-large);
 
         text-decoration: none;
@@ -533,7 +543,13 @@ footer {
     }
 
     .pagination-wrapper a:hover {
-        color: #186973;
+        color: var(--bluegreen-60);
+    }
+
+    .contactme-wrapper:nth-of-type(2) {
+        display: flex;
+        flex-direction: column;
+        place-items: flex-end;
     }
 }
 
@@ -570,7 +586,7 @@ footer {
 @media screen and (min-width: 1599px) {
 
     /* VIEWPORT */
-    .main-header, .cover-content, .main-wrapper, .contactme-section {
+    .main-header, .cover-content, .main-wrapper, .pagination, .contactme-section {
         width: 80vw;
         margin: 0 auto;
     }
